// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component status: Component turns descendant debugging off 1`] = `
<App>
  <Component>
    <Box.WithDebug
      debug={false}
      debugScope={true}
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <Box.WithDebug
            id="b"
          >
            <Box
              id="b"
            >
              <div
                className="  "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    id="c"
                  >
                    <div
                      className="  "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Component status: Component turns descendant debugging on 1`] = `
<App>
  <Component>
    <Box.WithDebug
      debug={true}
      debugScope={true}
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <Box.WithDebug
            id="b"
          >
            <Box
              debug={true}
              id="b"
            >
              <div
                className="debug  "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={true}
                    id="c"
                  >
                    <div
                      className="debug  "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Component status: Descendant turns debugging off 1`] = `
<App>
  <Component>
    <Box.WithDebug
      debug={true}
      debugScope={true}
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <Box.WithDebug
            debug={false}
            id="b"
          >
            <Box
              id="b"
            >
              <div
                className="  "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={true}
                    id="c"
                  >
                    <div
                      className="debug  "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Component status: Descendant turns debugging on 1`] = `
<App>
  <Component>
    <Box.WithDebug
      debug={false}
      debugScope={true}
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <Box.WithDebug
            debug={true}
            id="b"
          >
            <Box
              debug={
                Object {
                  "color": "red",
                  "style": undefined,
                }
              }
              id="b"
            >
              <div
                className="debug red "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    id="c"
                  >
                    <div
                      className="  "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context status: Component turns off debugging 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <Box.WithDebug
            debug={false}
            id="b"
          >
            <Box
              id="b"
            >
              <div
                className="  "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={
                      Object {
                        "color": "red",
                        "style": undefined,
                      }
                    }
                    id="c"
                  >
                    <div
                      className="debug red "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context status: Component turns on debugging 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <Box.WithDebug
            debug={true}
            id="b"
          >
            <Box
              debug={
                Object {
                  "color": "red",
                  "style": undefined,
                }
              }
              id="b"
            >
              <div
                className="debug red "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    id="c"
                  >
                    <div
                      className="  "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context status: Context debugging is off 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <Box.WithDebug
            id="b"
          >
            <Box
              id="b"
            >
              <div
                className="  "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    id="c"
                  >
                    <div
                      className="  "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context status: Context debugging is on 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <Box.WithDebug
            id="b"
          >
            <Box
              debug={
                Object {
                  "color": "red",
                  "style": undefined,
                }
              }
              id="b"
            >
              <div
                className="debug red "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={
                      Object {
                        "color": "red",
                        "style": undefined,
                      }
                    }
                    id="c"
                  >
                    <div
                      className="debug red "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context status: Nested providers 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <DebugProviderClass
            debug={false}
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                id="b"
              >
                <div
                  className="  "
                  id="b"
                >
                  <DebugProviderClass
                    debug={true}
                  >
                    <Box.WithDebug
                      id="c"
                    >
                      <Box
                        debug={
                          Object {
                            "color": "red",
                            "style": undefined,
                          }
                        }
                        id="c"
                      >
                        <div
                          className="debug red "
                          id="c"
                        />
                      </Box>
                    </Box.WithDebug>
                  </DebugProviderClass>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context status: Provider turns debugging off 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <DebugProviderClass
            debug={false}
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                id="b"
              >
                <div
                  className="  "
                  id="b"
                >
                  <Box.WithDebug
                    id="c"
                  >
                    <Box
                      id="c"
                    >
                      <div
                        className="  "
                        id="c"
                      />
                    </Box>
                  </Box.WithDebug>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context status: Provider turns debugging on 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <DebugProviderClass
            debug={true}
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                debug={
                  Object {
                    "color": "red",
                    "style": undefined,
                  }
                }
                id="b"
              >
                <div
                  className="debug red "
                  id="b"
                >
                  <Box.WithDebug
                    id="c"
                  >
                    <Box
                      debug={
                        Object {
                          "color": "red",
                          "style": undefined,
                        }
                      }
                      id="c"
                    >
                      <div
                        className="debug red "
                        id="c"
                      />
                    </Box>
                  </Box.WithDebug>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug context status: Provider turns on debugging 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <DebugProviderClass
            debug={true}
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                debug={
                  Object {
                    "color": "red",
                    "style": undefined,
                  }
                }
                id="b"
              >
                <div
                  className="debug red "
                  id="b"
                >
                  <Box.WithDebug
                    id="c"
                  >
                    <Box
                      debug={
                        Object {
                          "color": "red",
                          "style": undefined,
                        }
                      }
                      id="c"
                    >
                      <div
                        className="debug red "
                        id="c"
                      />
                    </Box>
                  </Box.WithDebug>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Options are inherited from context 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <Box.WithDebug
            id="b"
          >
            <Box
              debug={
                Object {
                  "color": "red",
                  "style": undefined,
                }
              }
              id="b"
            >
              <div
                className="debug red "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={
                      Object {
                        "color": "red",
                        "style": undefined,
                      }
                    }
                    id="c"
                  >
                    <div
                      className="debug red "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Scope allows unaltered context options to pass through 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <DebugProviderClass
            debug={true}
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                debug={
                  Object {
                    "color": "red",
                    "style": undefined,
                  }
                }
                id="b"
              >
                <div
                  className="debug red "
                  id="b"
                >
                  <Box.WithDebug
                    id="c"
                  >
                    <Box
                      debug={
                        Object {
                          "color": "red",
                          "style": undefined,
                        }
                      }
                      id="c"
                    >
                      <div
                        className="debug red "
                        id="c"
                      />
                    </Box>
                  </Box.WithDebug>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Scope merges options down tree 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "black",
            "style": "dash",
          }
        }
        id="a"
      >
        <div
          className="debug black dash"
          id="a"
        >
          <DebugProviderClass
            debug={
              Object {
                "box": Object {
                  "color": "red",
                },
              }
            }
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                debug={
                  Object {
                    "color": "red",
                    "style": "dash",
                  }
                }
                id="b"
              >
                <div
                  className="debug red dash"
                  id="b"
                >
                  <DebugProviderClass
                    debug={
                      Object {
                        "box": Object {
                          "style": "dot",
                        },
                      }
                    }
                  >
                    <Box.WithDebug
                      id="c"
                    >
                      <Box
                        debug={
                          Object {
                            "color": "red",
                            "style": "dot",
                          }
                        }
                        id="c"
                      >
                        <div
                          className="debug red dot"
                          id="c"
                        />
                      </Box>
                    </Box.WithDebug>
                  </DebugProviderClass>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Scope merges options with parent context 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "black",
            "style": "dash",
          }
        }
        id="a"
      >
        <div
          className="debug black dash"
          id="a"
        >
          <DebugProviderClass
            debug={
              Object {
                "box": Object {
                  "color": "red",
                },
              }
            }
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                debug={
                  Object {
                    "color": "red",
                    "style": "dash",
                  }
                }
                id="b"
              >
                <div
                  className="debug red dash"
                  id="b"
                >
                  <Box.WithDebug
                    id="c"
                  >
                    <Box
                      debug={
                        Object {
                          "color": "red",
                          "style": "dash",
                        }
                      }
                      id="c"
                    >
                      <div
                        className="debug red dash"
                        id="c"
                      />
                    </Box>
                  </Box.WithDebug>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Scoped component merges options down tree 1`] = `
<App>
  <Component>
    <Box.WithDebug
      debug={
        Object {
          "color": "red",
        }
      }
      debugScope={true}
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": "dash",
          }
        }
        id="a"
      >
        <div
          className="debug red dash"
          id="a"
        >
          <Box.WithDebug
            debug={
              Object {
                "style": "dot",
              }
            }
            debugScope={true}
            id="b"
          >
            <Box
              debug={
                Object {
                  "color": "red",
                  "style": "dot",
                }
              }
              id="b"
            >
              <div
                className="debug red dot"
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={
                      Object {
                        "color": "red",
                        "style": "dot",
                      }
                    }
                    id="c"
                  >
                    <div
                      className="debug red dot"
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Setting debug without context options. 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <Box.WithDebug
            debug={true}
            id="b"
          >
            <Box
              debug={true}
              id="b"
            >
              <div
                className="debug  "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    id="c"
                  >
                    <div
                      className="  "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Setting scope options without context options. 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <DebugProviderClass
            debug={
              Object {
                "box": Object {
                  "color": "red",
                },
              }
            }
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                debug={
                  Object {
                    "color": "red",
                  }
                }
                id="b"
              >
                <div
                  className="debug red "
                  id="b"
                >
                  <Box.WithDebug
                    id="c"
                  >
                    <Box
                      debug={
                        Object {
                          "color": "red",
                        }
                      }
                      id="c"
                    >
                      <div
                        className="debug red "
                        id="c"
                      />
                    </Box>
                  </Box.WithDebug>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Setting scope without context options. 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        id="a"
      >
        <div
          className="  "
          id="a"
        >
          <DebugProviderClass
            debug={true}
          >
            <Box.WithDebug
              id="b"
            >
              <Box
                debug={true}
                id="b"
              >
                <div
                  className="debug  "
                  id="b"
                >
                  <Box.WithDebug
                    id="c"
                  >
                    <Box
                      debug={true}
                      id="c"
                    >
                      <div
                        className="debug  "
                        id="c"
                      />
                    </Box>
                  </Box.WithDebug>
                </div>
              </Box>
            </Box.WithDebug>
          </DebugProviderClass>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Shallow copy component option over context option 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <Box.WithDebug
            debug={
              Object {
                "color": "green",
              }
            }
            id="b"
          >
            <Box
              debug={
                Object {
                  "color": "green",
                  "style": undefined,
                }
              }
              id="b"
            >
              <div
                className="debug green "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={
                      Object {
                        "color": "red",
                        "style": undefined,
                      }
                    }
                    id="c"
                  >
                    <div
                      className="debug red "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;

exports[`Debug options Shallow copy descendant option over context options 1`] = `
<App>
  <Component>
    <Box.WithDebug
      id="a"
    >
      <Box
        debug={
          Object {
            "color": "red",
            "style": undefined,
          }
        }
        id="a"
      >
        <div
          className="debug red "
          id="a"
        >
          <Box.WithDebug
            debug={
              Object {
                "color": "green",
              }
            }
            debugScope={true}
            id="b"
          >
            <Box
              debug={
                Object {
                  "color": "green",
                  "style": undefined,
                }
              }
              id="b"
            >
              <div
                className="debug green "
                id="b"
              >
                <Box.WithDebug
                  id="c"
                >
                  <Box
                    debug={
                      Object {
                        "color": "green",
                        "style": undefined,
                      }
                    }
                    id="c"
                  >
                    <div
                      className="debug green "
                      id="c"
                    />
                  </Box>
                </Box.WithDebug>
              </div>
            </Box>
          </Box.WithDebug>
        </div>
      </Box>
    </Box.WithDebug>
  </Component>
</App>
`;
